Gaim: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.59.9
	* Updated zh_TW.po file (Thanks breeze833)
	* Fix an oscar bug that caused some messages from 
	  AOL 8.0 to be dropped (Thanks Mark Doliner)
	* Changed "openprojects" to "freenode" in irc.c

version 0.59.8 (01/06/2003):
	* Ripped out all gtk2 support (Thanks Nathan Walp).
	* Fixed smiley related segfault (Thanks Robert McQueen)
	* Yahoo! can connect again

version 0.59.7 (12/21/2002):
	* Yahoo i18n fix (Thanks Ethan Blanton).
	* Fixed a bug in escaping saved passwords (Thanks
	  Eric Timme)
	* Fixed an overflow bug in perl script autoloading
	  (Thanks David Kaelbling)
	* Some build fixes for those using stricter compilers,
	  notably MIPSpro (Thanks David Kaelbling)
	* Fixed a bad argument to accept() calls (Thanks David
	  Kaelbling)
	* Fixed crashbug on empty rvous requests (Thanks Brandon Scott (Xeon))
	  for being the first to point this out.

version 0.59.6 (11/07/2002):
	* Fixed a segfault introduced in 0.59.5 when gtk
	  fails to read the ~/.gtkrc or reads it but fails
	  to create a style from it.
	* Jabber conference timestamps are no longer gigantic

version 0.59.5 (10/14/2002):
	* Fixed a Yahoo! segfault (Thanks, Craig Metz)

version 0.59.4 (10/06/2002):
	* Removed color keybinnding altogether.
	* Added a horizontal scrollbar to Edit page of
	   buddy list. (Thanks, David Fallon)
	* Various bug fixes ((Thanks to (in no particular order)
	  Ethan Blanton, Mark Doliner, Luke Schierer)
	* i18n fixes (thanks, A Lee)

version 0.59.3 (09/14/2002):
	* Reversed patch that accidentally caused Yahoo
	  not to connect--for implementation reasons
	* Changed "color" binding to Ctrl-K.
	* Unaliaising a person in the "Online" tab will show up
	  in the "Edit" tab as well (Thanks, Jason Willis)
	* Internationalization fixes, esp. with UTF-8 locales 
	  (Thanks Matt Wilson and Ethan Blanton)

version 0.59.2 (09/09/2002):
	* Japanese translation updated (Thanks, Junichi Uekawa)