@@ -5,6 +5,7 @@ version 0.59.9
 	* Fix an oscar bug that caused some messages from 
 	  AOL 8.0 to be dropped (Thanks Mark Doliner)
 	* Changed "openprojects" to "freenode" in irc.c
+	* Fixed charset conversion on systems which use a BOM for UCS-4 (Thanks, Alfredo Pen~a, Ethan Blanton)
 
 version 0.59.8 (01/06/2003):
 	* Ripped out all gtk2 support (Thanks Nathan Walp).
